--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -45,6 +45,7 @@
   position: absolute;
   left: -60px;
   right: 0;
+  top: 0;
   max-height: 0;
   margin: 60px auto;
   font-family: $logo-font;
